--- a/templates/index.html
+++ b/templates/index.html
@@ -7,22 +7,80 @@
         body {
             background-color: rgb(151, 151, 151);
         }
+
+        .popup {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 85%;
+            height: 85%;
+            overflow: auto;
+            background-color: rgb(77, 77, 77);
+        }
+        .stickModalContent {
+            background-color: blue;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid red;
+            width: 88%;
+        }
+        .closeModal {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .closeModal:hover, .closeModal:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Welcome to FlaskApp!</h2>
-    <p>This is the start of the AI App I think?</p>
+    <h1>DECO3000 Mental Health Sticky Notes AI App</h1>
     <button id="createSticky">Create sticky note</button>
+    <article id="stickyModal" class="popup">
+        <section class="stickyModalContent">
+            <span class="closeModal">&times;</span>
+            <p>This is where you would type your thoughts and how you are feeling today</p>
+            <form>
+                <label for="stickyNoteInput">How are you feeling? What are your thoughts?</label>
+                <input required type="text" id="stickyNoteInput" name="stickyNoteInput" placeholder="Type something here...." value="">
+
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+    </article>
+
     <h2 id="editable">...</h2>
+
     <script>
         var stickyNoteButton = document.getElementById("createSticky");
+        var stickyModal = document.getElementById("stickyModal");
+        var span = document.getElementsByClassName("closeModal")[0];
+
         stickyNoteButton.addEventListener("click", createStickyModal);
+        span.addEventListener("click", closeModal);
 
         function createStickyModal() {
             console.log('Create sticky note button was clicked.');
             var heading = document.getElementById("editable");
             heading.textContent = "Create sticky note button was clicked";
+
+            stickyModal.style.display = "block";
+        }
+
+        function closeModal() {
+            stickyModal.style.display = "none";
+            console.log('close modal button clicked');
+        }
+        window.onclick = function(event) {
+            if (event.target == stickyModal) {
+                stickyModal.style.display = "none";
+            }
         }
     </script>
 </body>
