--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,18 @@
         <section class="stickyModalContent">
             <span class="closeModal">&times;</span>
             <p>This is where you would type your thoughts and how you are feeling today</p>
-            <form>
+            <!--Modified the form to send a request to Flask Backend to be reviewed-->
+            <form id="'stickyNoteForm" onsubmit="submitForm(event)">
+                <label for="stickyNoteInput">How are you feeling? What are your thoughts?</label>
+                <input required type="text" id="stickyNoteInput" name="stickyNoteInput" placeholder="Type something here...." value="">
+                <input type="submit" value="Submit">
+            </form>
+            <!-- <form>
                 <label for="stickyNoteInput">How are you feeling? What are your thoughts?</label>
                 <input required type="text" id="stickyNoteInput" name="stickyNoteInput" placeholder="Type something here...." value="">
 
                 <input type="submit" value="Submit">
-            </form>
+            </form> -->
         </section>
     </article>
 
