"adding in JS in <script> tag to send data to Flask backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,38 @@
                 stickyModal.style.display = "none";
             }
         }
+        // This section handles the sending of form data to flask backend
+        // async function always returns a Promise, which is a placeholder for a value that will be resolved (completed) in the future
+        async function submitForm(event) {
+            //no default submission of form
+            evnt.preventDefault();
+            //get user input from form a9sticky note)
+            const userInput = document.getElementById('stickyNoteInput').value;
+            //sending this input to Flask backend using fetch
+            //using try to catch errors in 'catch' block
+            try{
+                const response = await fetch('/analyse',{ //await pauses execution until fetch is complete 
+                    method:'POST', //specifies HTTP requesr
+                    headers:{
+                        'content-type': 'application/json'// data is sent in the format of json
+                    },
+                    body: JSON.stringify({user_input:userInput})//converts Javascript object to a JSON string whre user_input is the key and userInput is the corresponding value pair
+                });
+                //parse json response from backend
+                const result = await response.json();
+                //display the result on the page 
+                if(result.error){
+                    alert('Error: '+result.error);
+                } else{
+                    const editable = document.getElementById("editable"); //this is getting the aforementioned editable h2 element which is initially placeholder but now being updated with the result
+                    editable.textContent = 'Sentiment: ${result.sentiment}';
+                }
+                closeModal();
+            } catch (error){
+                console.error('Error during fetch: ', error);
+                alert('Something went wrong while contacting the backend.');
+            }
+        }
     </script>
 </body>
 </html>
