"changed the Get method to a 'POST' method for the form id and did some debugging. changed editable.TextContent to backticks instead of quotation'

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             <span class="closeModal">&times;</span>
             <p>This is where you would type your thoughts and how you are feeling today</p>
             <!--Modified the form to send a request to Flask Backend to be reviewed-->
-            <form id="'stickyNoteForm" onsubmit="submitForm(event)">
+            <form id="'stickyNoteForm" onsubmit="submitForm(event)" method ="POST">
                 <label for="stickyNoteInput">How are you feeling? What are your thoughts?</label>
                 <input required type="text" id="stickyNoteInput" name="stickyNoteInput" placeholder="Type something here...." value="">
                 <input type="submit" value="Submit">
@@ -92,7 +92,7 @@
         // async function always returns a Promise, which is a placeholder for a value that will be resolved (completed) in the future
         async function submitForm(event) {
             //no default submission of form
-            evnt.preventDefault();
+            event.preventDefault();
             //get user input from form a9sticky note)
             const userInput = document.getElementById('stickyNoteInput').value;
             //sending this input to Flask backend using fetch
@@ -103,16 +103,16 @@
                     headers:{
                         'content-type': 'application/json'// data is sent in the format of json
                     },
-                    body: JSON.stringify({user_input:userInput})//converts Javascript object to a JSON string whre user_input is the key and userInput is the corresponding value pair
+                    body: JSON.stringify({user_input: userInput})//converts Javascript object to a JSON string whre user_input is the key and userInput is the corresponding value pair
                 });
                 //parse json response from backend
                 const result = await response.json();
                 //display the result on the page 
                 if(result.error){
-                    alert('Error: '+result.error);
+                    alert('Error: '+ result.error);
                 } else{
                     const editable = document.getElementById("editable"); //this is getting the aforementioned editable h2 element which is initially placeholder but now being updated with the result
-                    editable.textContent = 'Sentiment: ${result.sentiment}';
+                    editable.textContent = `Sentiment: ${result.sentiment}`;
                 }
                 closeModal();
             } catch (error){
